# UnitatControlEnllumenatMultiplataforma

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LogState.h  build.sh  flash-attach-usb.ps1  flash_esp32.sh  main.cpp  monitor_esp32.sh  monitor_esp32_log.sh  run_TestUnitariControlEntrades.ps1  run_log.ps1  run_log_win.ps1  run_test.ps1  sdkconfig.defaults  signals.h
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback_workflow.md
.devcontainer/: Dockerfile  devcontainer.json  install-esp-idf.sh
AOs/Blink/: Blink.h
ActuadorEntrades/: ActuadorEntrades.cpp  ActuadorEntrades.h
ActuadorSortides/: ActuadorSortides.cpp  ActuadorSortides.hpp  OutputWriter_Console.hpp  OutputWriter_HW.hpp
Blink/: Blink.cpp  Blink.h
ControlEntrades/: ControlEntrades.cpp  ControlEntrades.h  ControlEntradesState.h
ControlHorari/: ControlHorari.cpp  ControlHorari.h  ControlHorariState.h  json_horari.h
ControlRemot/: ControlRemot.cpp  ControlRemot.h  ControlRemotState.h  OutputConfig.h
DigitalEdgeDetector/: DigitalEdgeDetector.cpp  DigitalEdgeDetector.h  DigitalEdgeDetectorState.h  InputConfig.h  SharedState.h
HW/: OutputWriter_HW.hpp
HWReader/: IOReader_HW.hpp  InputReader_HW.hpp
HttpServer/: HttpServer.cpp  HttpServer.h
Integracio/: qp_config.hpp
LinuxScripts/: build.sh  build_win.sh  flash_esp32.sh  monitor_esp32.sh  monitor_esp32_log.sh
Log/: LogState.h
Monitor/: Monitor.cpp  Monitor.h
MonitorEntrades/: MonitorEntrades.cpp  MonitorEntrades.h
Rellotge/: Rellotge.cpp  Rellotge.h  RellotgeState.h
RemoteIO/: IOReader_HW.hpp  IOReader_Remot.hpp  IOReader_WS.hpp  InputReader_WS.hpp  RemoteIOState.h
Test/: TestController.hpp  TestUnitariControlEntrades.hpp
WinScripts/: run_TestUnitariControlEntrades.ps1  run_app.ps1  run_app_log.ps1
docs/: .$ControlEntrades.drawio.bkp  .$sistema.drawio.bkp  ControlEntrades - treballant flux dades browser-AO.drawio  ControlEntrades.drawio  ControlSortides-backup-20260512.drawio  ControlSortides-backup-20260609.drawio  ControlSortides.drawio  Diagnostic.drawio  FluxAOs.drawio  Rellotge.drawio  arquitectura_win_esp32.drawio  capes_per_plataforma.drawio  diagrama_capes_docker - copia.drawio  diagrama_capes_docker.drawio  drawio-conventions.md  qpcpp-architecture.md
main/: CMakeLists.txt  Kconfig.projbuild  main_esp32.cpp
main-win/: main.cpp
web/: assemble.sh  index.html  nav.html  sub-control-entrades.html  sub-control-sortides.html
win/: attach-usb.ps1  run_TestUnitariControlEntrades.ps1
(+22 files in other folders)
